welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:2: error: not found: value color
  color.RED()
  ^FlowerPot:7: error: not found: value color
  color.CYAN()
  ^FlowerPot:20: error: not found: value color
  color.ORANGE()
  ^FlowerPot:29: error: not found: value color
  color.PINK()
  ^FlowerPot:34: error: not found: value color
  color.GREEN()
  ^FlowerPot:55: error: not found: value color
  color.YELLOW
  ^